// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TextInput Component should handle readOnly, disabled: active 1`] = `
<textinput
  props="{
  "isReadOnly": false,
  "isDisabled": false,
  "children": []
}"
>
  <span
    class="pf-v6-c-form-control curiosity-text-input "
  >
    <input
      aria-invalid="false"
      data-ouia-component-id="OUIA-Generated-TextInputBase-4"
      data-ouia-component-type="PF6/TextInput"
      data-ouia-safe="true"
      id="generatedid-"
      name="generatedid-"
      type="text"
      value=""
    />
  </span>
</textinput>
`;

exports[`TextInput Component should handle readOnly, disabled: disabled 1`] = `
<textinput
  props="{
  "isReadOnly": false,
  "isDisabled": true,
  "children": []
}"
>
  <span
    class="pf-v6-c-form-control pf-m-disabled curiosity-text-input "
  >
    <input
      aria-invalid="false"
      data-ouia-component-id="OUIA-Generated-TextInputBase-3"
      data-ouia-component-type="PF6/TextInput"
      data-ouia-safe="true"
      disabled=""
      id="generatedid-"
      name="generatedid-"
      type="text"
      value=""
    />
  </span>
</textinput>
`;

exports[`TextInput Component should handle readOnly, disabled: readOnly 1`] = `
<textinput
  props="{
  "isReadOnly": true,
  "children": []
}"
>
  <span
    class="pf-v6-c-form-control pf-m-readonly curiosity-text-input "
  >
    <input
      aria-invalid="false"
      data-ouia-component-id="OUIA-Generated-TextInputBase-2"
      data-ouia-component-type="PF6/TextInput"
      data-ouia-safe="true"
      id="generatedid-"
      name="generatedid-"
      readonly=""
      type="text"
      value=""
    />
  </span>
</textinput>
`;

exports[`TextInput Component should render a basic component: basic component 1`] = `
<textinput
  props="{
  "children": []
}"
>
  <span
    class="pf-v6-c-form-control curiosity-text-input "
  >
    <input
      aria-invalid="false"
      data-ouia-component-id="OUIA-Generated-TextInputBase-1"
      data-ouia-component-type="PF6/TextInput"
      data-ouia-safe="true"
      id="generatedid-"
      name="generatedid-"
      type="text"
      value=""
    />
  </span>
</textinput>
`;

exports[`TextInput Component should return an emulated onChange event: emulated event, change 1`] = `"dolor sit"`;

exports[`TextInput Component should return an emulated onClear event on escape: emulated event, esc 1`] = `
[
  [
    {
      "checked": false,
      "currentTarget": <input
        aria-invalid="false"
        data-ouia-component-id="OUIA-Generated-TextInputBase-6"
        data-ouia-component-type="PF6/TextInput"
        data-ouia-safe="true"
        id="test-id"
        name="generatedid-"
        type="text"
        value=""
      />,
      "id": "test-id",
      "keyCode": 27,
      "name": "generatedid-",
      "persist": [Function],
      "target": <input
        aria-invalid="false"
        data-ouia-component-id="OUIA-Generated-TextInputBase-6"
        data-ouia-component-type="PF6/TextInput"
        data-ouia-safe="true"
        id="test-id"
        name="generatedid-"
        type="text"
        value=""
      />,
      "value": "",
    },
  ],
]
`;
